# advent-of-code

2022/01/c/: Makefile  solution.c
2022/01/cpp/: Dockerfile  Makefile  solution.cpp
2022/02/cpp/: Makefile  solution.cpp
2022_with_c/: .clang-format  .clang-tidy  CMakeLists.txt  Makefile  README.md
2022_with_c/aoc2022/: CMakeLists.txt
2022_with_c/aoc2022/day01/: CMakeLists.txt  aoc2022day01.h  day01.c  driver.c  test_driver.c
2022_with_c/aoc2022/day02/: CMakeLists.txt  day02.c  driver.c  test_driver.c
2022_with_c/aoc2022/day03/: CMakeLists.txt  day03.c  driver.c  test_driver.c
2022_with_c/aoc2022/day04/: CMakeLists.txt  ask.txt  day04.c  driver.c  test_driver.c
2022_with_c/aoc2022/day05/: CMakeLists.txt  aoc2022day05.h  day05.c  driver.c  solution_one.txt  solution_two.txt  test_driver.c
2022_with_c/aoc2022/day06/: CMakeLists.txt  ask.txt  day06.c  driver.c  test_driver.c
2022_with_c/aoc2022/day07/: CMakeLists.txt  ask.txt  day07.c  driver.c  input.txt  sample_solution_two.txt  test_driver.c
2022_with_c/aoc2022/day_template/: CMakeLists.txt  day00.c  driver.c  sample_input.txt  sample_solution_one.txt  solution_one.txt  solution_two.txt  test_driver.c
2022_with_c/cmake/: lint.cmake
2022_with_c/libs/: CMakeLists.txt
2022_with_c/libs/dyn_array/: CMakeLists.txt
2022_with_c/libs/dyn_array/include/: dyn_array.h
2022_with_c/libs/dyn_array/src/: dyn_array.c
2022_with_c/libs/dyn_array/tests/: dyn_array_tests.c
2022_with_c/libs/dyn_stack/: CMakeLists.txt
2022_with_c/libs/dyn_stack/include/: dyn_stack.h
2022_with_c/libs/dyn_stack/src/: dyn_stack.c
2022_with_c/libs/dyn_stack/tests/: dyn_stack_tests.c
2022_with_c/libs/dynamic_packed_container/: CMakeLists.txt
2022_with_c/libs/dynamic_packed_container/include/: dynamic_packed_container.h
2022_with_c/libs/dynamic_packed_container/src/: dynamic_packed_container.c
2022_with_c/libs/dynamic_packed_container/tests/: dpc_tests.c
2022_with_c/libs/logging/: CMakeLists.txt
2022_with_c/libs/logging/include/: logging.h
2022_with_c/libs/logging/src/: logging.c
